escopo do header e funcionalidade de navegação - Beatriz

--- a/index.html
+++ b/index.html
@@ -12,11 +12,34 @@
     <title>4Safe</title>
 </head>
 <body>
-    <div class="cor1">teste 1 rem</div>
+    <header>
+        <div class="logo-nome">
+            <img src="./img/4safe.png">
+            <h2>4Safe</h2>
+        </div>
+        <div id="nav">
+            <a href="#sobre"><span>Sobre</span></a> 
+            <a href="#produtos"><span>Produtos</span></a>
+        </div>
+    </header>
+    <hr>
+    <section id="sobre">
+        <p>
+            <h1>SOBRE</h1>
+        </p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus unde est quod atque quibusdam quisquam autem odit debitis consequatur voluptates similique mollitia eligendi voluptas hic cumque ex, beatae impedit architecto earum ea. Sequi eum, vitae placeat possimus illo nihil facilis at sapiente numquam ipsum officiis, architecto maxime enim esse excepturi laboriosam dolores? Eius expedita hic, sit esse cum ducimus doloribus.
+    </section>
+    <section id="produtos">
+        <p>
+            <h1>Produtos</h1>
+        </p>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus unde est quod atque quibusdam quisquam autem odit debitis consequatur voluptates similique mollitia eligendi voluptas hic cumque ex, beatae impedit architecto earum ea. Sequi eum, vitae placeat possimus illo nihil facilis at sapiente numquam ipsum officiis, architecto maxime enim esse excepturi laboriosam dolores? Eius expedita hic, sit esse cum ducimus doloribus.</p>
+    </section>
+    <!-- <div class="cor1">teste 1 rem</div>
     <div class="cor2">teste 1.5 rem</div>
     <div class="cor3">teste 2 rem</div>
     <div class="cor4">teste 1 rem</div>
     <div class="cor5"></div>
-    <div class="cor6"></div>
+    <div class="cor6"></div> -->
 </body>
 </html>
