--- a/index.html
+++ b/index.html
@@ -1,25 +1,45 @@
 <!DOCTYPE html>
-<html lang="pt-br" class="dark-mode">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" type="imagex/png" href="img/Design-sem-nome-_2_.ico">
+    <link rel="shortcut icon" type="imagex/png" href="img/aba.png">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="btn.css">
+    
     <title>4Safe</title>
 </head>
 <body>
     <header>
-        <div class="logo-nome">
-            <img src="./img/4safe.png">
-            <h2>4Safe</h2>
-        </div>
-        <div id="nav">
-            <a href="#sobre"><span>Sobre</span></a> 
-            <a href="#produtos"><span>Produtos</span></a>
+        
+        <div id="header-principal">
+            <div class="logo-nome">
+                <a href="#" id="logo-mobile"><img src="img/logo-simplificado.png" alt="Logo 4Safe"></a>
+                <a href="#" id="logo-navegador"><img src="./img/logo-header.png" alt="Logo 4Safe"></a>
+            </div>
+            <div class="links">
+                <div class="dark">
+                    <div class="btn-dark"></div>
+                    <span>DarkMode</span>
+                </div>
+                <div class="nav-bar">
+                    <div class="menu-btn">
+                        <div class="btn-burger"></div>
+                    </div>
+                    <div>
+                        <ul class="nav">
+                            <a href="#sobre"><li>Sobre</li></a>
+                            <a href="#produtos"><li>Produtos</li></a>
+                            <a href="#"><li>Menu</li></a>
+                            <a href="#"><li>Menu</li></a>
+                        </ul>
+                    </div>   
+                </div>
+            </div>
         </div>
     </header>
     <hr>
@@ -35,11 +55,8 @@
         </p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus unde est quod atque quibusdam quisquam autem odit debitis consequatur voluptates similique mollitia eligendi voluptas hic cumque ex, beatae impedit architecto earum ea. Sequi eum, vitae placeat possimus illo nihil facilis at sapiente numquam ipsum officiis, architecto maxime enim esse excepturi laboriosam dolores? Eius expedita hic, sit esse cum ducimus doloribus.</p>
     </section>
-    <!-- <div class="cor1">teste 1 rem</div>
-    <div class="cor2">teste 1.5 rem</div>
-    <div class="cor3">teste 2 rem</div>
-    <div class="cor4">teste 1 rem</div>
-    <div class="cor5"></div>
-    <div class="cor6"></div> -->
+ 
+    <script src="btn.js"></script>
+    <script src="dark-mode.js"></script>
 </body>
 </html>
