pequenas alterações nos botões

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html >
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="btn.css">
+    <link rel="stylesheet" href="btn-dark.css">
     
     <title>4Safe</title>
 </head>
@@ -35,7 +36,7 @@
                             <a href="#sobre"><li>Sobre</li></a>
                             <a href="#produtos"><li>Produtos</li></a>
                             <a href="#"><li>Menu</li></a>
-                            <a href="#"><li>Menu</li></a>
+                            <a href="#"><li>Menu</li></a>   
                         </ul>
                     </div>   
                 </div>
