Edição da sessão produtos

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
             <h1>Produtos</h1>
         </p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus unde est quod atque quibusdam quisquam autem odit debitis consequatur voluptates similique mollitia eligendi voluptas hic cumque ex, beatae impedit architecto earum ea. Sequi eum, vitae placeat possimus illo nihil facilis at sapiente numquam ipsum officiis, architecto maxime enim esse excepturi laboriosam dolores? Eius expedita hic, sit esse cum ducimus doloribus.</p>
+        <div class="seguros">
+            <img class="seguro-vida" src="./img/seguro-vida.png" alt="Seguro de vida">
+                <p class="texto-vida">Texto</p>
+            <img class="seguro-carro" src="./img/seguro-carro.png" alt="Seguro de carro">
+        </div>
     </section>
  
     <script src="btn.js"></script>
