cadastro para seguro de vida, concluido

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                         <ul class="nav">
                             <a href="#sobre"><li>Sobre</li></a>
                             <a href="#produtos"><li>Produtos</li></a>
-                            <a href="#"><li>Menu</li></a>
-                            <a href="#"><li>Menu</li></a>
+                            <a href="#seguro-de-vida"><li>Seguro de vida</li></a>
+                            <a href="#seguro-de-carro"><li>Seguro de carro</li></a>
                         </ul>
                     </div>   
                 </div>
@@ -54,11 +54,38 @@
             <h1>Produtos</h1>
         </p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus unde est quod atque quibusdam quisquam autem odit debitis consequatur voluptates similique mollitia eligendi voluptas hic cumque ex, beatae impedit architecto earum ea. Sequi eum, vitae placeat possimus illo nihil facilis at sapiente numquam ipsum officiis, architecto maxime enim esse excepturi laboriosam dolores? Eius expedita hic, sit esse cum ducimus doloribus.</p>
+
         <div class="seguros">
-            <img class="seguro-vida" src="./img/seguro-vida.png" alt="Seguro de vida">
-                <p class="texto-vida">Texto</p>
-            <img class="seguro-carro" src="./img/seguro-carro.png" alt="Seguro de carro">
+            <a href="#seguro-de-vida"><img class="img-seguro" src="./img/seguro-vida.png" alt="Seguro de vida"></a>
+            <a href="#seguro-de-carro"><img class="img-seguro" src="./img/seguro-carro.png" alt="Seguro de carro"></a>
         </div>
+    </section>
+
+    <section id="seguro-de-vida">
+        <div class="detalhes">
+            <div class="texto">
+                <h1>Seguro de vida</h1>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima repellat placeat quis quaerat quia eligendi est corrupti suscipit eius totam. Molestias tempore temporibus repellat eveniet odio omnis! Corrupti vero quasi doloremque deleniti voluptatem amet, debitis a possimus!</p> 
+                <h2>Solicite seu orçamento » </h2>
+            </div>
+            <div class="formulario">
+                <h3>Contato</h3>
+                <form class="dados">
+                    <label for="nome">Nome</label>
+                    <input type="text" name="nome" placeholder="Digite seu nome completo">
+                    <label for="nascimento">Data de nascimento</label>
+                    <input type="date" name="nascimento">
+                    <label for="email">E-mail</label>
+                    <input type="text" name="email" placeholder="Digite seu e-mail">
+                    <label for="telefone">telefone</label>
+                    <input type="text" name="telefone" placeholder="(DDD) 99999-9999">
+                    <button class="botao-contato" type="submit" name="botao">Enviar !!</button>
+                </form>
+            </div>
+        </div>
+    </section>
+    <section id="seguro-de-carro">
+
     </section>
  
     <script src="btn.js"></script>
