inseridos-textos-index

--- a/index.html
+++ b/index.html
@@ -70,7 +70,11 @@
             <p>
                 <h1>SOBRE</h1>
             </p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus unde est quod atque quibusdam quisquam autem odit debitis consequatur voluptates similique mollitia eligendi voluptas hic cumque ex, beatae impedit architecto earum ea. Sequi eum, vitae placeat possimus illo nihil facilis at sapiente numquam ipsum officiis, architecto maxime enim esse excepturi laboriosam dolores? Eius expedita hic, sit esse cum ducimus doloribus.
+            A 4Safe seguros tem o perfil inovador, somos o que há de melhor em seguros de vida e veicular.
+            Todos os nossos produtos são personalizáveis, temos a segurança e o conforto que você e
+            sua família merecem, com coberturas e assistências para escolha de acordo com o seu perfil e momento de vida.
+            Um seguro vitalício, sem reajuste por idade e muitas assistências.
+            Tenha tudo o que você e sua família precisam, e muito mais benefícios para aproveitar a vida!
         </section>
         <section id="produtos">
             <p>
@@ -88,7 +92,13 @@
             <div class="detalhes">
                 <div class="texto">
                     <h1>Seguro de vida</h1>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima repellat placeat quis quaerat quia eligendi est corrupti suscipit eius totam. Molestias tempore temporibus repellat eveniet odio omnis! Corrupti vero quasi doloremque deleniti voluptatem amet, debitis a possimus!</p> 
+                    <p>Os seguros de vida da 4Safe foram elaborados pensando na segurança e proteção de sua família, 
+                        garanta seu bem-estar e tranquilidade. Nossos produtos também trazem proteção em vários momentos 
+                        de sua vida, oferecendo tudo o que você precisa, além de benefícios! Confira nossas opões e
+                        escolha a ideal para você. Temos seguros flexíveis que te permitem escolher as coberturas e 
+                        assistências que mais se encaixem ao seu perfil e momento de vida. Em caso de invalidez ou  
+                        doenças graves, o seguro paga todo
+                        o tratamento e cuidados necessários.</P>
                     <h2>Solicite seu orçamento » </h2>
                 </div>
                 <div class="formulario">
@@ -108,9 +118,38 @@
             </div>
         </section>
         <section id="seguro-de-carro">
-
-        </section>
-
+        <div class="detalhes">
+            <div class="formulario">
+                <h3>Contato</h3>
+                <form class="dados">
+                    <label for="nome">Nome</label>
+                    <input type="text" name="nome" placeholder="Digite seu nome completo">
+                    <label for="nascimento">Data de nascimento</label>
+                    <input type="date" name="nascimento">
+                    <label for="email">E-mail</label>
+                    <input type="text" name="email" placeholder="Digite seu e-mail">
+                    <label for="telefone">telefone</label>
+                    <input type="text" name="telefone" placeholder="(DDD) 99999-9999">
+                    <button class="botao-contato" type="submit" name="botao">Enviar !!</button>
+                </form>
+                <div class="texto">
+                    <h1>Seguro de carro</h1>
+                        <p>Proteja seu carro ou moto com o 4Safe seguros. Proteção completa, conveniência onde você estiver.
+                        Cobertura na medida, sem carência e sem fidelidade.</p>
+                    <h2>Seguro para carros</h2>
+                        <p>Perfeito para quem deseja tranquilidade, segurança e comodidade no cuidado com o veículo.
+                        O que cobrimos: Roubo e furto, perda total, danos parciais, guincho, pane elétrica ou mecânica,
+                        pane seca (falta de gasolina), troca de pneu, chaveiro, estacionamento por uma noite
+                        Cobertura para terceiros, acessórios instalados, carro reserva</p>
+                    <h2>Seguro para motos</h2>
+                        <p>Com coberturas específicas e uma grande variedade de assistências, serviços e benefícios, 4Safe seguro 
+                        auto para Motos é a proteção que você precisa para curtir o seu veículo com tranquilidade. Assistência 24h grátis.</p>
+                        <h2> » Solicite seu orçamento</h2>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima repellat placeat quis quaerat quia eligendi est corrupti suscipit eius totam. Molestias tempore temporibus repellat eveniet odio omnis! Corrupti vero quasi doloremque deleniti voluptatem amet, debitis a possimus!</p>
+                </div>
+            </div>
+        </div>
+    <section id="seguro-de-carro">
 
     
     </main>
