Seção PRODUTO estilizada

--- a/index.html
+++ b/index.html
@@ -77,14 +77,32 @@
             Tenha tudo o que você e sua família precisam, e muito mais benefícios para aproveitar a vida!
         </section>
         <section id="produtos">
-            <p>
-                <h1>Produtos</h1>
-            </p>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus unde est quod atque quibusdam quisquam autem odit debitis consequatur voluptates similique mollitia eligendi voluptas hic cumque ex, beatae impedit architecto earum ea. Sequi eum, vitae placeat possimus illo nihil facilis at sapiente numquam ipsum officiis, architecto maxime enim esse excepturi laboriosam dolores? Eius expedita hic, sit esse cum ducimus doloribus.</p>
-
+            <h1>Com a 4Safe o seu plano pode ser personalizado, confira alguns de nossos beneficios</h1>
             <div class="seguros">
-                <a href="#seguro-de-vida"><img class="img-seguro" src="./img/seguro-vida.png" alt="Seguro de vida"></a>
-                <a href="#seguro-de-carro"><img class="img-seguro" src="./img/seguro-carro.png" alt="Seguro de carro"></a>
+                <div class="tipo-seguro">
+                    <p><b>Para o seu seguro de vida: </b></p>
+                    <ul>
+                        <li>☑️ Seguros de 10 mil a 500 mil reais</li>
+                        <li>🩺 Plano de saude, com profissionais qualificados</li>
+                        <li>💊 Descontos em farmácias</li>
+                        <li>🚑 Atendimento exclusivo</li>
+                        <li>📞 Suporte 24h</li>
+                        <li>☑️ Entre muitos outros beneficios</li>
+                    </ul>
+                    <a href="#seguro-de-vida"><img class="img-seguro" src="./img/seguro-vida.png" alt="Seguro de vida"></a>
+                </div>
+                <div class="tipo-seguro">
+                    <p><b>Para o seu seguro de carro:</b></p>
+                    <ul>
+                        <li>☑️ Guincho 24h</li>
+                        <li>⛽ Descontos em posto de gasolina</li>
+                        <li>👨‍🔧 Rede de oficinas com serviços gratuitos</li>
+                        <li>🩹 Indenização para danos corporais</li>
+                        <li>📞 Suporte 24h</li>
+                        <li>☑️ Entre muitos outros beneficios</li>
+                    </ul>
+                    <a href="#seguro-de-carro"><img class="img-seguro" src="./img/seguro-carro.png" alt="Seguro de carro"></a>
+                </div>
             </div>
         </section>
 
@@ -132,10 +150,12 @@
                     <input type="text" name="telefone" placeholder="(DDD) 99999-9999">
                     <button class="botao-contato" type="submit" name="botao">Enviar !!</button>
                 </form>
-                <div class="texto">
-                    <h1>Seguro de carro</h1>
+                
+            </div>
+                <div class="texto-carro">
+                    <!-- <h1>Seguro de carro</h1>
                         <p>Proteja seu carro ou moto com o 4Safe seguros. Proteção completa, conveniência onde você estiver.
-                        Cobertura na medida, sem carência e sem fidelidade.</p>
+                        Cobertura na medida, sem carência e sem fidelidade.</p> -->
                     <h2>Seguro para carros</h2>
                         <p>Perfeito para quem deseja tranquilidade, segurança e comodidade no cuidado com o veículo.
                         O que cobrimos: Roubo e furto, perda total, danos parciais, guincho, pane elétrica ou mecânica,
@@ -145,11 +165,9 @@
                         <p>Com coberturas específicas e uma grande variedade de assistências, serviços e benefícios, 4Safe seguro 
                         auto para Motos é a proteção que você precisa para curtir o seu veículo com tranquilidade. Assistência 24h grátis.</p>
                         <h2> » Solicite seu orçamento</h2>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Minima repellat placeat quis quaerat quia eligendi est corrupti suscipit eius totam. Molestias tempore temporibus repellat eveniet odio omnis! Corrupti vero quasi doloremque deleniti voluptatem amet, debitis a possimus!</p>
                 </div>
-            </div>
         </div>
-    <section id="seguro-de-carro">
+        </section>
 
     
     </main>
