Atualização das seções seguro-de-vida e seguro-de-carro

--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                 <div class="tipo-seguro">
                     <p><b>Para o seu seguro de vida: </b></p>
                     <ul>
-                        <li>☑️ Seguros de 10 mil a 500 mil reais</li>
-                        <li>🩺 Plano de saude, com profissionais qualificados</li>
+                        <li>☑️ Seguros de 10 mil até 500 mil reais</li>
+                        <li>🩺 Plano de saúde, com profissionais qualificados</li>
                         <li>💊 Descontos em farmácias</li>
                         <li>🚑 Atendimento exclusivo</li>
                         <li>📞 Suporte 24h</li>
@@ -112,14 +112,14 @@
                     <h1>Seguro de vida</h1>
                     <p>Os seguros de vida da 4Safe foram elaborados pensando na segurança e proteção de sua família, 
                         garanta seu bem-estar e tranquilidade. Nossos produtos também trazem proteção em vários momentos 
-                        de sua vida, oferecendo tudo o que você precisa, além de benefícios! Confira nossas opões e
+                        de sua vida, oferecendo tudo o que você precisa, além de benefícios! Confira nossas opções e
                         escolha a ideal para você. Temos seguros flexíveis que te permitem escolher as coberturas e 
                         assistências que mais se encaixem ao seu perfil e momento de vida. Em caso de invalidez ou  
                         doenças graves, o seguro paga todo
                         o tratamento e cuidados necessários.</P>
                     <h2>Solicite seu orçamento » </h2>
                 </div>
-                <div class="formulario">
+                <div class="formulario-vida">
                     <h3>Contato</h3>
                     <form class="dados">
                         <label for="nome">Nome</label>
@@ -137,7 +137,7 @@
         </section>
         <section id="seguro-de-carro">
         <div class="detalhes">
-            <div class="formulario">
+            <div class="formulario-carro">
                 <h3>Contato</h3>
                 <form class="dados">
                     <label for="nome">Nome</label>
@@ -156,15 +156,15 @@
                     <!-- <h1>Seguro de carro</h1>
                         <p>Proteja seu carro ou moto com o 4Safe seguros. Proteção completa, conveniência onde você estiver.
                         Cobertura na medida, sem carência e sem fidelidade.</p> -->
-                    <h2>Seguro para carros</h2>
+                    <h1>Seguro para carros</h1>
                         <p>Perfeito para quem deseja tranquilidade, segurança e comodidade no cuidado com o veículo.
                         O que cobrimos: Roubo e furto, perda total, danos parciais, guincho, pane elétrica ou mecânica,
-                        pane seca (falta de gasolina), troca de pneu, chaveiro, estacionamento por uma noite
-                        Cobertura para terceiros, acessórios instalados, carro reserva</p>
-                    <h2>Seguro para motos</h2>
+                        pane seca (falta de gasolina), troca de pneu, chaveiro, estacionamento por uma noite, cobertura para terceiros,
+                        acessórios instalados, carro reserva, entre outras coisas.</p>
+                    <h1>Seguro para motos</h1>
                         <p>Com coberturas específicas e uma grande variedade de assistências, serviços e benefícios, 4Safe seguro 
                         auto para Motos é a proteção que você precisa para curtir o seu veículo com tranquilidade. Assistência 24h grátis.</p>
-                        <h2> » Solicite seu orçamento</h2>
+                        <h2> « Solicite seu orçamento</h2>
                 </div>
         </div>
         </section>
@@ -196,10 +196,10 @@
             </div>
             <div class="site">
                 <h2>Site</h2>
-                <a href="#"><h3>Quem Somos</h3></a>
-                <a href="#"><h3>4Life seguro de vida</h3></a>
-                <a href="#"><h3>4Car seguro auto</h3></a>
-                <a href="#"><h3>Entre em contato</h3></a>
+                <a href="#sobre"><h3>Quem Somos</h3></a>
+                <a href="#seguro-de-vida"><h3>4Life seguro de vida</h3></a>
+                <a href="#seguro-de-carro"><h3>4Car seguro auto</h3></a>
+                <a href="#social"><h3>Entre em contato</h3></a>
                 <a href="#"><h3>FAQ</h3></a>
                 
             </div>
