--- a/index.html
+++ b/index.html
@@ -35,10 +35,11 @@
                     </div>
                     <div>
                         <ul class="nav">
+                            <a href="#publicidade"><li>Home</li></a>
                             <a href="#sobre"><li>Sobre</li></a>
-                            <a href="#produtos"><li>Produtos</li></a>
+                            <a href="#produtos"><li>Seguros</li></a>
                             <a href="#seguro-de-vida"><li>Seguro de vida</li></a>
-                            <a href="#seguro-de-carro"><li>Seguro de carro</li></a>
+                            <a href="#seguro-de-carro"><li>Seguro de automóveis</li></a>
 
                         </ul>
                     </div>   
@@ -92,7 +93,7 @@
                     <a href="#seguro-de-vida"><img class="img-seguro" src="./img/seguro-vida.png" alt="Seguro de vida"></a>
                 </div>
                 <div class="tipo-seguro">
-                    <p><b>Para o seu seguro de carro:</b></p>
+                    <p><b>Para o seu seguro de automóvel:</b></p>
                     <ul>
                         <li>☑️ Guincho 24h</li>
                         <li>⛽ Descontos em posto de gasolina</li>
@@ -111,12 +112,11 @@
                 <div class="texto">
                     <h1>Seguro de vida</h1>
                     <p>Os seguros de vida da 4Safe foram elaborados pensando na segurança e proteção de sua família, 
-                        garanta seu bem-estar e tranquilidade. Nossos produtos também trazem proteção em vários momentos 
+                        garantindo seu bem-estar e tranquilidade. Nossos produtos também trazem proteção em vários momentos 
                         de sua vida, oferecendo tudo o que você precisa, além de benefícios! Confira nossas opções e
                         escolha a ideal para você. Temos seguros flexíveis que te permitem escolher as coberturas e 
                         assistências que mais se encaixem ao seu perfil e momento de vida. Em caso de invalidez ou  
-                        doenças graves, o seguro paga todo
-                        o tratamento e cuidados necessários.</P>
+                        doenças graves, o seguro paga todo o tratamento e cuidados necessários.</P>
                     <h2>Solicite seu orçamento » </h2>
                 </div>
                 <div class="formulario-vida">
