Update section SOBRE

--- a/index.html
+++ b/index.html
@@ -70,16 +70,27 @@
                 <div class="txt-sobre">
                
                     <h2>Sobre nós</h2>
-                    <p>A 4Safe seguros tem o perfil inovador, somos o que há de melhor em seguros de vida e veicular.
+                    <p>
+                        A 4Safe seguros tem o perfil inovador, somos o que há de melhor em seguros de vida e veicular.
                     </p>
                     <p>
-                    Todos os nossos produtos são personalizáveis, temos a segurança e o conforto que você e
-                    sua família merecem, com coberturas e assistências para escolha de acordo com o seu perfil e momento de vida.
+                        Um seguro vitalício, sem reajuste por idade e muitas assistências.
+                        Tenha tudo o que você e sua família precisam, e muito mais benefícios para aproveitar a vida!
                     </p>
-                    <p>
-                    Um seguro vitalício, sem reajuste por idade e muitas assistências.
-                    Tenha tudo o que você e sua família precisam, e muito mais benefícios para aproveitar a vida!
+                    <p>Todos os seus produtos são personalizáveis, temos a segurança e o conforto que você e sua família merecem, com coberturas e assistências para escolha de acordo com seu perfil e momento de vida.
                     </p>
+                    <div class="valores">
+                        <div>
+                            <h3>Missão</h3>
+                            <p>
+                                Conhecer nossos clientes, para que assim possamos oferecer seguros personalizados e de qualidade, de acordo com as necessidades do consumidor.
+                            </p>
+                        </div>
+                        <div>
+                            <h3>Valores</h3>
+                            <p>Transparência, ética, comprometimento, confiança e principalmente segurança. Esses são alguns de nossos valores.</p>
+                        </div>
+                    </div>
                 </div>
                 <div class="img-sobre">
                     <img src="img/banner1.png" alt="Celular mostrando na tela o logo da 4safe seguro.">
@@ -246,7 +257,7 @@
             <div class="colaboradores">
                 <h2>Colaboradores</h2>
                <div class="colaborador">
-                    <a href="http://facebook.com/" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.linkedin.com/in/beatriz-de-souza-santos" target="_blank" rel="noopener noreferrer">
                         <h3>Beatriz Souza</h3>
                         <img class="icon"  src="img/social/linkedin.png" alt="Logo do linkedin">
                     </a>
