ajustado responsividades em outros tamanhos de tela

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="styles-max-580px.css">
+    <link rel="stylesheet" href="styles-media.css">
     <link rel="stylesheet" href="btn-dark.css">
     <script src="btn.js" defer></script>
     <script src="dark-mode.js" defer></script>
@@ -39,9 +39,8 @@
                                 <a href="#publicidade"><li>Home</li></a>
                                 <a href="#sobre"><li>Sobre</li></a>
                                 <a href="#produtos"><li>Seguros</li></a>
-                                <a href="#seguro-de-vida"><li>Seguro de vida</li></a>
-                                <a href="#seguro-de-carro"><li>Seguro de automóveis</li></a>
-
+                                <a href="#seguro-de-vida"><li>4Life Vida</li></a>
+                                <a href="#seguro-de-carro"><li>4Life Auto</li></a>
                             </ul>
                         </div>   
                     </div>
@@ -62,7 +61,7 @@
                     <div class="foto-principal">
                         <img src="img/4safe-banner.jpg" alt="Casal andando de mãos dadas com seu filho pequeno em um dia de outono.">
                     </div>
-            </div>   
+                </div>   
         </section>
         
         <section>
@@ -88,7 +87,7 @@
                         </div>
                         <div>
                             <h3>Valores</h3>
-                            <p>Transparência, ética, comprometimento, confiança e principalmente segurança. Esses são alguns de nossos valores.</p>
+                            <p> Confiança, Transparência, ética, comprometimento e principalmente segurança. Esses são alguns de nossos valores.</p>
                         </div>
                     </div>
                 </div>
@@ -201,7 +200,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="frequentes">
             <div class="faqs">
                 <h2>Perguntas Frequentes</h2>
                 <div class="faq">
@@ -263,7 +262,7 @@
                     </a>
                </div>
                <div class="colaborador">
-                    <a href="http://facebook.com/" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.linkedin.com" target="_blank" rel="noopener noreferrer">
                         <h3>Camila Barros</h3>
                         <img class="icon"  src="img/social/linkedin.png" alt="Logo do linkedin">
                     </a>
@@ -281,7 +280,7 @@
                 <a href="#seguro-de-vida"><h3>4Life seguro de vida</h3></a>
                 <a href="#seguro-de-carro"><h3>4Car seguro auto</h3></a>
                 <a href="#social"><h3>Entre em contato</h3></a>
-                <a href="#"><h3>FAQ</h3></a>
+                <a href="#frequentes"><h3>FAQ</h3></a>
                 
             </div>
             <div id="social">
