ajustado botao confira com link para produtos

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     <div class="slogan">
                         <h1>Finalmente um seguro feito para você.</h1>
                         <p>Para você se preocupar apenas com o que realmente importa.</p>
-                        <a href="" class="botao">Simule aqui</a>
+                        <a href="#produtos" class="botao">Confira</a>
                     </div>
                     <div class="foto-principal">
                         <img src="img/4safe-banner.jpg" alt="Casal andando de mãos dadas com seu filho pequeno em um dia de outono.">
